# inHouse

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  build_ms.bat  inHouse.sln  linux_build.sh
.github/workflows/: cmake.yml  codeql-analysis.yml
Dispatcher/: CMakeLists.txt  Dispatcher.cpp  Dispatcher.h  Dispatcher.vcxproj  ModuleBase.cpp  ModuleBase.h  Msg.cpp  Msg.h  Msg_IRCmd.cpp  Msg_IRCmd.h  Msg_IncomingMQTT.cpp  Msg_IncomingMQTT.h  Msg_UpdateSensorTemp.cpp  Msg_UpdateSensorTemp.h  Msg_UpdateSetTemp.cpp  Msg_UpdateSetTemp.h  Msg_UpdateTemperatureInfo.cpp  Msg_UpdateTemperatureInfo.h  Msg_UpdateWeather.cpp  Msg_UpdateWeather.h  main.cpp
IR/: CMakeLists.txt  IR.cpp  IR.h  IR.vcxproj  IRDriver.cpp  IRDriver.h  IRManager.cpp  IRManager.h  LED.cpp  LED.h  Remote.h  SamsungTV.cpp  SamsungTV.h  main.cpp
LCD/: CMakeLists.txt  LCD.cpp  LCD.h  LCD.vcxproj  LCDManager.cpp  LCDManager.h  test.cpp
Logger/: CMakeLists.txt  Logger.h  Logger.vcxproj
MQTT/: CMakeLists.txt  MQTT.cpp  MQTT.h  MQTT.vcxproj  MQTTManager.cpp  MQTTManager.h
RF/: CMakeLists.txt  RF.vcxproj  Source1.cpp  main.cpp
Temp/: CMakeLists.txt  Temp.vcxproj  TempSensor.cpp  TempSensor.h  TemperatureManager.cpp  TemperatureManager.h  main.cpp
Utils/: CMakeLists.txt  Date.cpp  Date.h  HTTP.cpp  HTTP.h  Utils.vcxproj  Weather.cpp  Weather.h  main.cpp
inHouse/: CMakeLists.txt  inHouse.vcxproj  main.cpp
